cleanup Maven dependencies, added simple Dockerfile, removed support of Liquibase